--- a/shared.css
+++ b/shared.css
@@ -3,16 +3,18 @@
 *,
 *::before,
 *::after {
-      box-sizing: border-box;
+  box-sizing: border-box;
+  /* margin: 0; */
+  padding: 0;
 }
 
 html,
 body {
-      margin: 0%;
-      padding: 0%;
-      width: 100%;
-      height: 100vh;
-      background: #121212;
+  margin: 0%;
+  padding: 0%;
+  width: 100%;
+  height: 100vh;
+  background: #121212;
 }
 
 html {
@@ -35,7 +37,6 @@ a {
   text-decoration: none;
 }
 
-
 button {
   margin-right: 1rem !important;
   padding: 1.4rem 3rem;
@@ -45,9 +46,7 @@ button {
   letter-spacing: 0.4rem;
   font-weight: 300;
   padding-left: 0rem;
-
 }
-
 
 .loading-screen {
   position: absolute;
@@ -69,7 +68,9 @@ button {
   height: 15rem;
   width: 15rem;
   border-radius: 100%;
-  box-shadow: 0 1px 0 0 rgba(255, 192, 0, 0.25), 0 -1px 0 0 rgba(255, 64, 0, 0.25), 1px 0 0 0 rgba(255, 192, 0, 0.25), -1px 0 0 0 rgba(255, 64, 0, 0.25), 1px -1px 0 0 rgba(255, 128, 0, 0.5), -1px 1px 0 0 rgba(255, 128, 0, 0.5), 1px 1px 0 0 rgba(255, 255, 0, 0.75), -1px -1px 0 0 rgba(255, 0, 0, 0.75);
+  box-shadow: 0 1px 0 0 rgba(255, 192, 0, 0.25), 0 -1px 0 0 rgba(255, 64, 0, 0.25), 1px 0 0 0 rgba(255, 192, 0, 0.25),
+    -1px 0 0 0 rgba(255, 64, 0, 0.25), 1px -1px 0 0 rgba(255, 128, 0, 0.5), -1px 1px 0 0 rgba(255, 128, 0, 0.5), 1px 1px 0 0 rgba(255, 255, 0, 0.75),
+    -1px -1px 0 0 rgba(255, 0, 0, 0.75);
   z-index: 10;
 }
 
@@ -85,17 +86,17 @@ button {
   grid-row: 4/5;
 }
 
-.circle-multiple:nth-of-type(2)>.circle {
-  box-shadow: 0 1px 0 0 rgba(192, 216, 144, 0.25), 0 -1px 0 0 rgba(179, 0, 27, 0.25), 1px 0 0 0 rgba(38, 38, 38, 0.25), -1px 0 0 0 rgba(37, 92, 153, 0.25), 1px -1px 0 0 rgba(149, 179, 213, 0.5), -1px 1px 0 0 rgba(137, 176, 174, 0.5), 1px 1px 0 0 rgba(85, 91, 110, 0.75), -1px -1px 0 0 rgba(201, 232, 225, 0.75);
+.circle-multiple:nth-of-type(2) > .circle {
+  box-shadow: 0 1px 0 0 rgba(192, 216, 144, 0.25), 0 -1px 0 0 rgba(179, 0, 27, 0.25), 1px 0 0 0 rgba(38, 38, 38, 0.25),
+    -1px 0 0 0 rgba(37, 92, 153, 0.25), 1px -1px 0 0 rgba(149, 179, 213, 0.5), -1px 1px 0 0 rgba(137, 176, 174, 0.5),
+    1px 1px 0 0 rgba(85, 91, 110, 0.75), -1px -1px 0 0 rgba(201, 232, 225, 0.75);
 }
 
-
-
-.circle-multiple>a {
+.circle-multiple > a {
   position: absolute;
   top: 50%;
   left: 50%;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-weight: bolder;
   transform: translate(-50%, -50%) !important;
   text-align: center;
@@ -125,40 +126,37 @@ button {
 }
 
 .circle-multiple .circle:nth-of-type(2) {
-  animation: psycho 2s linear .1s infinite;
+  animation: psycho 2s linear 0.1s infinite;
 }
 
 .circle-multiple .circle:nth-of-type(3) {
-  animation: psycho 2s linear .25s infinite;
+  animation: psycho 2s linear 0.25s infinite;
 }
-
 
 @keyframes psycho {
   0% {
-        transform: rotate(0deg) scale(1) translate(0, 0);
+    transform: rotate(0deg) scale(1) translate(0, 0);
   }
 
   33% {
-        transform: rotate(360deg) scale(1) translate(5px, 5px);
+    transform: rotate(360deg) scale(1) translate(5px, 5px);
   }
 
   66% {
-        transform: rotate(720deg) scale(1) translate(-5px, -5px);
+    transform: rotate(720deg) scale(1) translate(-5px, -5px);
   }
 
   100% {
-        transform: rotate(1080deg) scale(1) translate(0, 0);
+    transform: rotate(1080deg) scale(1) translate(0, 0);
   }
 }
 
 .circle-multiple:hover .circle {
-
   -webkit-animation-play-state: paused;
   -moz-animation-play-state: paused;
   -o-animation-play-state: paused;
   animation-play-state: paused;
 }
-
 
 /* media queries */
 
@@ -167,7 +165,8 @@ button {
 ##Screen = 1281px to higher resolution desktops
 */
 
-@media (min-width: 1281px) {}
+@media (min-width: 1281px) {
+}
 
 /*
 ##Device = Laptops, Desktops
@@ -175,15 +174,14 @@ button {
 */
 
 @media (min-width: 1025px) and (max-width: 1280px) {
-
   html {
-        font-size: 9.5px;
+    font-size: 9.5px;
   }
 }
 
 @media (max-width: 900px) {
   .ring {
-        display: none;
+    display: none;
   }
 }
 
@@ -193,13 +191,12 @@ button {
 */
 
 @media (min-width: 768px) and (max-width: 1024px) {
-
   html {
-        font-size: 9px;
+    font-size: 9px;
   }
 
   .circles {
-        grid-row: 9/10;
+    grid-row: 9/10;
   }
 }
 
@@ -209,7 +206,6 @@ button {
 */
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-
   /* html {
         font-size: 7.5px;
   } */
@@ -221,32 +217,29 @@ button {
 */
 
 @media (min-width: 481px) and (max-width: 767px) {
-
   html {
-        font-size: 8.5px;
+    font-size: 8.5px;
   }
 
   .circles {
-        grid-row: 6/7;
+    grid-row: 6/7;
   }
 
   .media {
-        grid-column: 1/2;
-        display: flex;
-        align-items: start;
-        justify-content: center;
-        width: 100%;
-        padding: 0;
-        height: 100%;
-        grid-row: 4/5;
+    grid-column: 1/2;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    height: 100%;
+    grid-row: 4/5;
   }
 
   .media ul {
-        padding: 0;
-        margin-top: 7.5rem;
+    padding: 0;
+    margin-top: 7.5rem;
   }
-
-
 }
 
 /*
@@ -255,115 +248,110 @@ button {
 */
 
 @media (min-width: 321px) and (max-width: 480px) {
-
   html {
-        font-size: 7.5px;
+    font-size: 7.5px;
   }
 
   .header .ml7 span {
-        font-size: 3.5rem;
+    font-size: 3.5rem;
   }
 
-  .header>#tagline {
-        font-size: 1.6rem;
+  .header > #tagline {
+    font-size: 1.6rem;
   }
 
   .circles {
-        grid-row: 6/7;
+    grid-row: 6/7;
   }
 
   .media {
-        grid-column: 1/2;
-        display: flex;
-        align-items: start;
-        justify-content: center;
-        width: 100%;
-        padding: 0;
-        height: 100%;
-        grid-row: 4/5;
+    grid-column: 1/2;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    height: 100%;
+    grid-row: 4/5;
   }
 
   .media ul {
-        padding: 0;
-        margin-top: 7.5rem;
+    padding: 0;
+    margin-top: 7.5rem;
   }
 }
 
 @media (min-width: 260px) and (max-width: 320px) {
   html {
-        font-size: 5.5px;
+    font-size: 5.5px;
   }
 
   .header .ml7 span {
-        font-size: 3.5rem;
+    font-size: 3.5rem;
   }
 
-  .header>#tagline {
-        font-size: 1.6rem;
+  .header > #tagline {
+    font-size: 1.6rem;
   }
 
   .circles {
-        grid-row: 6/7;
+    grid-row: 6/7;
   }
 
   .media {
-        grid-column: 1/2;
-        display: flex;
-        align-items: start;
-        justify-content: center;
-        width: 100%;
-        padding: 0;
-        height: 100%;
-        grid-row: 4/5;
+    grid-column: 1/2;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    height: 100%;
+    grid-row: 4/5;
   }
 
   .media ul {
-        padding: 0;
-        margin-top: 7.5rem;
+    padding: 0;
+    margin-top: 7.5rem;
   }
 }
 
 @media (min-height: 330px) and (max-height: 678px) and (orientation: landscape) {
-
   html {
-        font-size: 6px;
+    font-size: 6px;
   }
 
   .header .ml7 span {
-        font-size: 3.5rem;
+    font-size: 3.5rem;
   }
 
-  .header>#tagline {
-        font-size: 1.7rem;
+  .header > #tagline {
+    font-size: 1.7rem;
   }
 
   .circles {
-        grid-row: 5/6;
-        margin-top: -5rem;
+    grid-row: 5/6;
+    margin-top: -5rem;
 
-        display: flex;
-        justify-content: center;
-
+    display: flex;
+    justify-content: center;
   }
 
   .media {
-        grid-column: 1/2;
-        display: flex;
-        align-items: start;
-        justify-content: center;
-        width: 100%;
-        padding: 0;
-        height: 100%;
-        grid-row: 4/5;
+    grid-column: 1/2;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    height: 100%;
+    grid-row: 4/5;
   }
 
   .media ul {
-        padding: 0;
-        margin-top: 7.5rem;
+    padding: 0;
+    margin-top: 7.5rem;
   }
 }
-
-
 
 /* white mode */
 
