--- a/portfolio.css
+++ b/portfolio.css
@@ -137,3 +137,8 @@ a {
   color: white;
   border: none;
 }
+
+.white-box {
+  color: black !important;
+  background-color: rgba(255, 255, 255, 0.7) !important;
+}
