--- a/shared.css
+++ b/shared.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
 
 *,
 *::before,
@@ -68,8 +68,10 @@ button {
   height: 15rem;
   width: 15rem;
   border-radius: 100%;
-  box-shadow: 0 1px 0 0 rgba(255, 192, 0, 0.25), 0 -1px 0 0 rgba(255, 64, 0, 0.25), 1px 0 0 0 rgba(255, 192, 0, 0.25),
-    -1px 0 0 0 rgba(255, 64, 0, 0.25), 1px -1px 0 0 rgba(255, 128, 0, 0.5), -1px 1px 0 0 rgba(255, 128, 0, 0.5), 1px 1px 0 0 rgba(255, 255, 0, 0.75),
+  box-shadow: 0 1px 0 0 rgba(255, 192, 0, 0.25),
+    0 -1px 0 0 rgba(255, 64, 0, 0.25), 1px 0 0 0 rgba(255, 192, 0, 0.25),
+    -1px 0 0 0 rgba(255, 64, 0, 0.25), 1px -1px 0 0 rgba(255, 128, 0, 0.5),
+    -1px 1px 0 0 rgba(255, 128, 0, 0.5), 1px 1px 0 0 rgba(255, 255, 0, 0.75),
     -1px -1px 0 0 rgba(255, 0, 0, 0.75);
   z-index: 10;
 }
@@ -87,16 +89,18 @@ button {
 }
 
 .circle-multiple:nth-of-type(2) > .circle {
-  box-shadow: 0 1px 0 0 rgba(192, 216, 144, 0.25), 0 -1px 0 0 rgba(179, 0, 27, 0.25), 1px 0 0 0 rgba(38, 38, 38, 0.25),
-    -1px 0 0 0 rgba(37, 92, 153, 0.25), 1px -1px 0 0 rgba(149, 179, 213, 0.5), -1px 1px 0 0 rgba(137, 176, 174, 0.5),
-    1px 1px 0 0 rgba(85, 91, 110, 0.75), -1px -1px 0 0 rgba(201, 232, 225, 0.75);
+  box-shadow: 0 1px 0 0 rgba(192, 216, 144, 0.25),
+    0 -1px 0 0 rgba(179, 0, 27, 0.25), 1px 0 0 0 rgba(38, 38, 38, 0.25),
+    -1px 0 0 0 rgba(37, 92, 153, 0.25), 1px -1px 0 0 rgba(149, 179, 213, 0.5),
+    -1px 1px 0 0 rgba(137, 176, 174, 0.5), 1px 1px 0 0 rgba(85, 91, 110, 0.75),
+    -1px -1px 0 0 rgba(201, 232, 225, 0.75);
 }
 
 .circle-multiple > a {
   position: absolute;
   top: 50%;
   left: 50%;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: bolder;
   transform: translate(-50%, -50%) !important;
   text-align: center;
@@ -170,201 +174,6 @@ button {
   -moz-animation-play-state: paused;
   -o-animation-play-state: paused;
   animation-play-state: paused;
-}
-
-/* media queries */
-
-/*
-##Device = Desktops
-##Screen = 1281px to higher resolution desktops
-*/
-
-@media (min-width: 1281px) {
-}
-
-/*
-##Device = Laptops, Desktops
-##Screen = B/w 1025px to 1280px
-*/
-
-@media (min-width: 1025px) and (max-width: 1280px) {
-  html {
-    font-size: 9.5px;
-  }
-}
-
-@media (max-width: 900px) {
-  .ring {
-    display: none;
-  }
-}
-
-/*
-##Device = Tablets, Ipads (portrait)
-##Screen = B/w 768px to 1024px
-*/
-
-@media (min-width: 768px) and (max-width: 1024px) {
-  html {
-    font-size: 9px;
-  }
-
-  .circles {
-    grid-row: 9/10;
-  }
-}
-
-/*
-##Device = Tablets, Ipads (landscape)
-##Screen = B/w 768px to 1024px
-*/
-
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  /* html {
-        font-size: 7.5px;
-  } */
-}
-
-/*
-##Device = Low Resolution Tablets, Mobiles (Landscape)
-##Screen = B/w 481px to 767px
-*/
-
-@media (min-width: 481px) and (max-width: 767px) {
-  html {
-    font-size: 8.5px;
-  }
-
-  .circles {
-    grid-row: 6/7;
-  }
-
-  .media {
-    grid-column: 1/2;
-    display: flex;
-    align-items: start;
-    justify-content: center;
-    width: 100%;
-    padding: 0;
-    height: 100%;
-    grid-row: 4/5;
-  }
-
-  .media ul {
-    padding: 0;
-    margin-top: 7.5rem;
-  }
-}
-
-/*
-##Device = Most of the Smartphones Mobiles (Portrait)
-##Screen = B/w 320px to 479px
-*/
-
-@media (min-width: 321px) and (max-width: 480px) {
-  html {
-    font-size: 7.5px;
-  }
-
-  .header .ml7 span {
-    font-size: 3.5rem;
-  }
-
-  .header > #tagline {
-    font-size: 1.6rem;
-  }
-
-  .circles {
-    grid-row: 6/7;
-  }
-
-  .media {
-    grid-column: 1/2;
-    display: flex;
-    align-items: start;
-    justify-content: center;
-    width: 100%;
-    padding: 0;
-    height: 100%;
-    grid-row: 4/5;
-  }
-
-  .media ul {
-    padding: 0;
-    margin-top: 7.5rem;
-  }
-}
-
-@media (min-width: 260px) and (max-width: 320px) {
-  html {
-    font-size: 5.5px;
-  }
-
-  .header .ml7 span {
-    font-size: 3.5rem;
-  }
-
-  .header > #tagline {
-    font-size: 1.6rem;
-  }
-
-  .circles {
-    grid-row: 6/7;
-  }
-
-  .media {
-    grid-column: 1/2;
-    display: flex;
-    align-items: start;
-    justify-content: center;
-    width: 100%;
-    padding: 0;
-    height: 100%;
-    grid-row: 4/5;
-  }
-
-  .media ul {
-    padding: 0;
-    margin-top: 7.5rem;
-  }
-}
-
-@media (min-height: 330px) and (max-height: 678px) and (orientation: landscape) {
-  html {
-    font-size: 6px;
-  }
-
-  .header .ml7 span {
-    font-size: 3.5rem;
-  }
-
-  .header > #tagline {
-    font-size: 1.7rem;
-  }
-
-  .circles {
-    grid-row: 5/6;
-    margin-top: -5rem;
-
-    display: flex;
-    justify-content: center;
-  }
-
-  .media {
-    grid-column: 1/2;
-    display: flex;
-    align-items: start;
-    justify-content: center;
-    width: 100%;
-    padding: 0;
-    height: 100%;
-    grid-row: 4/5;
-  }
-
-  .media ul {
-    padding: 0;
-    margin-top: 7.5rem;
-  }
 }
 
 /* white mode */
