--- a/style.css
+++ b/style.css
@@ -126,9 +126,15 @@ p {
   width: 100%;
   height: auto;
   grid-column: 6/7;
-  grid-row: 4/5;
+  grid-row: 3;
   display: inline-block;
-  justify-content: end;
+  /* justify-content: end; */
+}
+
+.media ul {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .media a {
@@ -137,12 +143,6 @@ p {
   border-radius: 10%;
   font-size: 3.5rem;
   padding: 1.2rem 0;
-}
-
-.media ul {
-  position: absolute;
-  list-style: none;
-  /* justify-self: end; */
 }
 
 .ring {
